--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/styled-components": "^5.1.24",
     "axios": "^0.26.1",
+    "emailjs": "^3.8.0",
+    "emailjs-com": "^3.2.0",
     "govuk-react": "^0.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
