--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emailjs-com": "^3.2.0",
     "govuk-react": "^0.10.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
